--- a/NLayer.Service/NLayer.Service.csproj
+++ b/NLayer.Service/NLayer.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.6.45" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NLayer.Data\NLayer.Data.csproj" />
   </ItemGroup>
 
