--- a/NLayer.API/appsettings.json
+++ b/NLayer.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "sqlConn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "Redis": "localHost"
+    "Redis": "localHost",
+    "sqlConn2": "Data Source=AYSL\\SQLEXPRESS;Initial Catalog=Patika;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "AllowedHosts": "*",
   "JWT": {
